--- a/docs/src/docs/method/dp/工厂模式.md
+++ b/docs/src/docs/method/dp/工厂模式.md
@@ -12,15 +12,27 @@
 
 ::: 
 
-**特点:**
+**特点**
 
 - 提供了一个统一的接口来创建一系列相关或相互依赖的对象，而无需向客户端暴露创建逻辑。
 - 不符合开闭原则，如果需要增加新的产品，需要修改工厂类的代码。
 
-**适用场景:**
+**适用场景**
 
 - 工厂类负责创建的对象较少，且客户端只关心所需产品而不关心创建细节。
 - 当产品种类相对固定，不会频繁变动时。
+- 在需要快速构建原型或者小规模应用时，作为临时解决方案，因为它简单且易于实现
+
+**存在的缺陷**
+
+- **扩展性差**：添加新产品时，需要修改工厂类的代码，违背了开闭原则。
+- **违反了单一职责原则**：随着产品种类的增加，工厂类可能变得庞大且难以维护。
+- **不够灵活**：不适用于产品等级结构复杂或多系列产品的创建场景。
+
+**体现的设计模式原则**
+
+- **单一职责原则**：工厂类专注于创建对象，与业务逻辑分离。
+- **迪米特法则（最少知识原则）**：客户端不需要知道具体产品的创建细节，只需与工厂类交互。
 
 **示例**
 
