Structural design pattern finished

--- a/docs/src/docs/method/dp/七大原则.md
+++ b/docs/src/docs/method/dp/七大原则.md
@@ -144,3 +144,59 @@ class WideGoose implements IFly{}
 - **代码生成**: 一些工具可以根据类图自动生成基础的代码框架。
 - **文档生成**: 类图可以作为项目文档的一部分，帮助维护和理解系统。
 
+## 设计模式分类
+
+### **创建型模式（Creational Patterns）**
+
+创建型模式关注的是对象的创建过程，旨在隐藏创建逻辑、控制对象的创建方式，以及使系统独立于如何创建、组合和表示对象。这类模式让程序中的对象实例化过程更加灵活、可控制和易于管理。创建型模式包括：
+
+- [单例模式（Singleton）](/docs/method/dp/单例模式.md)
+- [工厂模式（Factory Method）](/docs/method/dp/工厂模式.md)
+- [建造者模式（Builder）](/docs/method/dp/建造者模式.md)
+- [原型模式（Prototype）](/docs/method/dp/原型模式.md)
+
+### **结构型模式（Structural Patterns）**
+
+ 结构型模式关注的是如何组合类和对象以形成更大的结构，同时保证结构的灵活、高效和易于理解。它们通过封装、组合及代理等方式简化系统结构，使其更易于维护。结构型模式包括：
+
+- [适配器模式（Adapter）](/docs/method/dp/适配器模式.md)
+- [桥接模式（Bridge）](/docs/method/dp/桥接模式.md)
+- [装饰器模式（Decorator）](/docs/method/dp/装饰器模式.md)
+- [组合模式（Composite）](/docs/method/dp/组合模式.md)
+- [外观模式（Facade）](/docs/method/dp/外观模式.md)
+- [享元模式（Flyweight）](/docs/method/dp/享元模式.md)
+- [代理模式（Proxy）](/docs/method/dp/代理模式.md)
+
+### **行为型模式（Behavioral Patterns）**
+
+行为型模式关注的是对象之间的职责分配以及它们之间的通信方式，用于描述在特定场景下对象之间如何交互和协作。这类模式定义了对象之间的责任分配和算法的组织方式，以达到特定的行为目的。行为型模式包括：
+
+- [责任链模式（Chain of Responsibility）](/docs/method/dp/责任链模式.md)
+- [命令模式（Command）](/docs/method/dp/命令模式.md)
+- [解释器模式（Interpreter）](/docs/method/dp/解释器模式.md)
+- [迭代器模式（Iterator）](/docs/method/dp/迭代器模式.md)
+- [中介者模式（Mediator）](/docs/method/dp/中介者模式.md)
+- [备忘录模式（Memento）](/docs/method/dp/备忘录模式.md)
+- [观察者模式（Observer）](/docs/method/dp/观察者模式.md)
+- [状态模式（State）](/docs/method/dp/状态模式.md)
+- [策略模式（Strategy）](/docs/method/dp/策略模式.md)
+- [模板方法模式（Template Method）](/docs/method/dp/模板方法模式.md)
+- [访问者模式（Visitor）](/docs/method/dp/访问者模式.md)
+
+:::danger 推荐书籍
+《设计模式：可复用面向对象软件的基础》是设计模式领域的经典之作。
+
+《Head First设计模式》：这本书以其独特的教学风格，通过图像、故事和实践例子，让设计模式的学习变得生动有趣，特别适合初学者。
+
+《大话设计模式》：适合中文读者，以轻松幽默的语言讲解设计模式，使用C#作为示例语言，（我看的是Java溢彩加强版）。
+
+《设计模式之禅》：深入浅出地介绍了多种设计模式，并提供了丰富的Java实战经验，适合有一定编程基础的读者。
+
+《研磨设计模式》：内容严谨，注重实战，也是使用Java语言来阐述设计模式的运用。
+
+《设计模式解析》：表述清晰易懂，提供完整的Java示例，是面向对象设计和学习模式的好选择。
+
+《敏捷软件开发：原则、模式与实践》：结合敏捷开发、极限编程(XP)、面向对象编程(OOP)和设计模式，适合希望在敏捷环境中应用设计模式的开发者。
+
+《Java与模式》：通过Java语言讲解设计模式，内容丰富且语言生动，有助于加深对Java标准库的理解。
+:::
