--- a/docs/src/docs/db/mysql/索引优化.md
+++ b/docs/src/docs/db/mysql/索引优化.md
@@ -9,13 +9,13 @@ title: MySQL 索引优化
 在MySQL中，创建索引的基本命令是 `CREATE INDEX`。以下是创建索引的一般语法：
 
 
-```sql
+```bash
 CREATE INDEX index_name ON table_name (column_name[, ...]);
 ```
 
 如果你想创建一个普通索引（非唯一索引），你只需指定索引名和基于哪些列创建索引
 
-```sql
+```bash
 CREATE INDEX idx_username ON users (username);
 ```
 
@@ -23,13 +23,13 @@ CREATE INDEX idx_username ON users (username);
 
 如果你想要创建一个唯一索引（不允许重复值的索引），可以使用 `UNIQUE` 关键字：
 
-```sql
+```bash
 CREATE UNIQUE INDEX idx_unique_email ON users (email);
 ```
 
 另外，MySQL还支持创建部分索引（只对列的一部分进行索引）和前缀索引，例如：
 
-```sql
+```bash
 CREATE INDEX idx_user_lastname_prefix ON users (lastname(10));
 ```
 
@@ -37,21 +37,21 @@ CREATE INDEX idx_user_lastname_prefix ON users (lastname(10));
 
 对于全文索引（适用于文本类型的列进行全文搜索），语法有所不同：
 
-```sql
+```bash
 CREATE FULLTEXT INDEX idx_fulltext_description ON products (description);
 ```
 
 最后，如果要在已经存在的表上创建索引，也可以使用 `ALTER TABLE` 命令：
 
 
-```sql
+```bash
 ALTER TABLE table_name ADD INDEX index_name (column_name);
 ```
 
 或者对于唯一索引：
 
 
-```sql
+```bash
 ALTER TABLE table_name ADD UNIQUE INDEX idx_unique_column (column_name);
 ```
 
